add webp broswer changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,8 +16,8 @@
         "typescript"
     ],
     "editor.codeActionsOnSave": {
-        "source.fixAll": true,
-    },
+		"source.fixAll": "explicit"
+	},
     "files.associations": {
         "iterator": "cpp"
     },
